--- a/static/RLadiesMeetups/meetup2_Tidyverse_exercises/Tidyverse_exercises.Rmd
+++ b/static/RLadiesMeetups/meetup2_Tidyverse_exercises/Tidyverse_exercises.Rmd
@@ -32,14 +32,14 @@ layout: true
 &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
 12/02/2019</span></div> 
 ---
-background-image: url(https://github.com/rstudio/hex-stickers/raw/master/SVG/tidyverse.svg?sanitize=true)
+background-image: url(https://raw.githubusercontent.com/tidyverse/tidyverse/main/man/figures/logo.png)
 background-size: 550px
 background-position: 50% 50%
 
 
 ---
 
-background-image: url(https://github.com/rstudio/hex-stickers/raw/master/SVG/tidyverse.svg?sanitize=true)
+background-image: url(https://raw.githubusercontent.com/tidyverse/tidyverse/main/man/figures/logo.png)
 background-size: 100px
 background-position: 90% 3%
 
